[package]
name = "isk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking","json"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
