[package]
name = "isk"
version = "0.1.3"
edition = "2021"
authors = ["isksss <104404522+isksss@users.noreply.github.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking","json"] }
serde = { version = "1.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.8.8"
dirs = "5.0.1"
rand = "0.8.5"
